syntax = "proto3";

package command;

import "ext.proto";
import "google/protobuf/any.proto";


enum CommandType {
	// EMPTY is the type of command sent during connection establishment
  	EMPTY = 0;
  	ListDir = 1;
  	Push = 2;
  	Pull = 3; 
	Screenshot = 4;
	Forward = 5;
	Reverse = 6;
	ForwardReceive = 7;
	ReverseReceive = 8;
	ListTunnel = 9;
	CloseTunnel = 10;
}

message Command {
	message Arg {
		oneof value {
			string str_value = 1;
  	  	  	int64 int_value = 2;
  	  	  	bool bool_value = 3;
  	  	}
  	}
  	CommandType type = 1;
  	map<string, Arg> args = 2;
}

message MapResp {
	map<string, string> data = 1;
}

message Ret {
	google.protobuf.Any resp = 1 [(ext.nullable) = true];
  	uint64 err_no = 2;
  	string err_msg = 3;
}

enum TunnelDirection {
	DIRECTION_KNOWN = 0;
	DIRECTION_FORWARD = 1;
	DIRECTION_REVERSE = 2;
}

message TunnelConnect {
	string tunnel_key = 1;
	string addr = 2;
	TunnelDirection direction = 3;
}

message TunnelConnectResp{
	string tunnel_key = 1;
	bool success = 2;
	string error = 3;
}



message Tunnel {
	string tunnel_key = 1;
	string local_addr = 2 [(ext.json) = "local_addr,omitempty"];
	string remote_addr = 3 [(ext.json) = "remote_addr,omitempty"];
	TunnelDirection direction = 4;
}

message ListTunnelResp {
	repeated Tunnel tunnels = 1 [(ext.nullable) = true];
}
